# AI-interior-design

./: .env.cranl.backend  .env.cranl.frontend  cranl_deploy.sh  nixpacks.toml  start_backend.sh  start_frontend.sh
api/: pyproject.toml  railpack.json
api/app/: main.py
api/app/routers/: generate.py
frontend/: next.config.ts  railpack.json
