[project]
name = "ai-interior-api"
version = "0.1.0"
description = "AI Home Styling Platform - API Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "asyncpg>=0.30.0",
    "google-cloud-storage>=2.18.0",
    "arq>=0.26.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "async-timeout>=4.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
